# geekbrains-C

Hard(C++)/: Lesson(C++)-1.cpp  PhoneBook.txt
Hard(C++)/Lesson(C++)-2/: Lesson_2(C++).cpp
Hard(C++)/Lesson(C++)-3/: Lesson(C++)-3.cpp
Hard(C++)/Lesson(C++)-4/: Lesson(C++)-4.cpp
Hard(C++)/Lesson(C++)-5/: Lesson(C++)-5.cpp
Hard(C++)/Lesson(C++)-6/: Lesson(C++)-6.cpp
Hard(C++)/Lesson(C++)-7/: CMakeLists.txt  lesson-C-7.cpp  lesson-C-7.h  test_mod.cpp
Hard(C++)/Lesson(C++)-7/protobuf/: data.pb.h
Hard(C++)/Lesson(C++)-8/: CMakeLists.txt  lesson-С-7-8.cpp  lesson-С-7-8.h  main.cpp  test.h
Hard(C++)/Lesson(C++)-8/protobuf/: data.pb.cc  data.proto
